# FastAPI

./: .env  main.py  pyproject.toml  requirements.txt
baw/: .env  goods.py  install.py
static/: goods.html  login.html
test_script/: conftest.py  test_goods.py  test_install.py
