[project]
name = "pythonfastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    fastapi>=0.139.0,
    pydantic>=2.13.4,
    pymysql>=1.2.0,
    python-dotenv>=1.2.2,
    python-jose[cryptography]>=3.5.0,
    python-multipart>=0.0.32,
    requests>=2.34.2,
    starlette>=1.3.1,
    uvicorn>=0.49.0,
    cryptography>=42.0.0
]
