[project]
name = "pythonfastapi"
version = "0.1.0"
description = "点餐系统 API - FastAPI 应用"
readme = "README.md"
requires-python = ">=3.9"  # 改为 3.9，Vercel 对 3.13 支持可能不完善
dependencies = [
    "fastapi==0.115.6",           # 锁定版本，避免兼容性问题
    "pydantic==2.10.4",
    "pyfiglet==1.0.2",
    "pymysql==1.1.1",
    "pytest==8.3.4",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",  # 明确版本并包含加密支持
    "python-multipart==0.0.20",
    "requests==2.32.3",
    "starlette==0.41.3",
    "uvicorn==0.34.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "httpx==0.27.2",
    "pytest-cov==6.0.0",
]
